# typed-rpc

./: .gitignore  AGENTS.md  README.md  flake.nix  runagents.sh  typed-rpc.cabal
SKILLS/: add-new-test-module.md
app/: Main.hs
scripts/: test-api.sh
src/: TypedRpc.hs
test/: Spec.hs
test/Test/: HandleRequest.hs  JsonCodec.hs  ServiceBuilding.hs
typed-rpc/: typed-rpc.cabal
typed-rpc/app/: Main.hs
typed-rpc/src/Data/: TypedRpc.hs
typed-rpc/test/: Spec.hs
